Completed Unit testing for phase 1 for service and controllers class